--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -1,4 +1,4 @@
-<div class="right-sidebar-panel">
+<div class="right-sidebar-panel hidden lg:block">
   <div class="container">
     <slot />
   </div>
