--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -1,5 +1,6 @@
 ---
 import type { InferGetStaticPropsType } from 'astro';
+import config from 'virtual:starlight/user-config';
 
 import { getSidebar } from './utils/navigation';
 import { paths } from './utils/routing';
@@ -20,7 +21,6 @@ import MarkdownContent from './components/MarkdownContent.astro';
 import RightSidebar from './components/RightSidebar.astro';
 import Sidebar from './components/Sidebar.astro';
 import SkipLink from './components/SkipLink.astro';
-import MobileTableOfContents from './components/TableOfContents/MobileTableOfContents.astro';
 import ThemeProvider from './components/ThemeProvider.astro';
 import PageFrame from './layout/PageFrame.astro';
 import TwoColumnContent from './layout/TwoColumnContent.astro';
@@ -40,18 +40,34 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 const { dir, entry, entryMeta, isFallback, lang, locale } = Astro.props;
 const { Content, headings } = await entry.render();
 const sidebar = getSidebar(Astro.url.pathname, locale);
+
+const hasSidebar = entry.data.pageType !== 'splash';
+const tocConfig = !hasSidebar
+  ? false
+  : entry.data.tableOfContents !== undefined
+  ? entry.data.tableOfContents
+  : config.tableOfContents;
+const hasToC = Boolean(tocConfig);
 ---
 
-<html lang={lang} dir={dir}>
+<html lang={lang} dir={dir} data-has-toc={hasToC} data-has-sidebar={hasSidebar}>
   <head>
     <HeadSEO data={entry.data} lang={lang} />
     <style>
+      html:not([data-has-toc]) {
+        --sl-mobile-toc-height: 0rem;
+      }
       /* Add scroll padding to ensure anchor headings aren't obscured by nav */
       html {
         /* Additional padding is needed to account for the mobile TOC */
         scroll-padding-top: calc(
           1.5rem + var(--sl-nav-height) + var(--sl-mobile-toc-height)
         );
+      }
+      @media (min-width: 50em) {
+        [data-has-sidebar] {
+          --sl-content-inline-start: var(--sl-sidebar-width);
+        }
       }
       @media (min-width: 72em) {
         html {
@@ -65,10 +81,9 @@ const sidebar = getSidebar(Astro.url.pathname, locale);
     <SkipLink {locale} />
     <PageFrame {locale}>
       <Header slot="header" {locale} />
-      <Sidebar slot="sidebar" {sidebar} {locale} />
-      <MobileTableOfContents {headings} {locale} />
+      {hasSidebar && <Sidebar slot="sidebar" {sidebar} {locale} />}
       <TwoColumnContent>
-        <RightSidebar slot="right-sidebar" {headings} {locale} />
+        <RightSidebar slot="right-sidebar" {headings} {locale} {tocConfig} />
         <main data-pagefind-body lang={entryMeta.lang} dir={entryMeta.dir}>
           <ContentPanel>
             <h1
