--- a/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
+++ b/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
@@ -1,27 +1,21 @@
 ---
-import type { MarkdownHeading } from 'astro';
-import config from 'virtual:starlight/user-config';
 import { useTranslations } from '../../utils/translations';
 import Icon from '../Icon.astro';
 import TableOfContentsList from './TableOfContentsList.astro';
-import { generateToC } from './generateToC';
+import type { TocItem } from './generateToC';
 
 interface Props {
-  headings: MarkdownHeading[];
+  toc: TocItem[];
   locale: string | undefined;
+  maxHeadingLevel: number;
+  minHeadingLevel: number;
 }
 
-const t = useTranslations(Astro.props.locale);
-const toc = generateToC(Astro.props.headings, {
-  ...config.tableOfContents,
-  title: t('tableOfContents.overview'),
-});
+const { locale, toc, maxHeadingLevel, minHeadingLevel } = Astro.props;
+const t = useTranslations(locale);
 ---
 
-<mobile-starlight-toc
-  data-min-h={config.tableOfContents.minHeadingLevel}
-  data-max-h={config.tableOfContents.maxHeadingLevel}
->
+<mobile-starlight-toc data-min-h={minHeadingLevel} data-max-h={maxHeadingLevel}>
   <nav aria-labelledby="starlight__on-this-page--mobile" class="lg:hidden">
     <details id="starlight__mobile-toc">
       <summary id="starlight__on-this-page--mobile" class="flex">
@@ -48,7 +42,7 @@ const toc = generateToC(Astro.props.headings, {
   }
   @media (min-width: 50rem) {
     nav {
-      inset-inline-start: var(--sl-sidebar-width);
+      inset-inline-start: var(--sl-content-inline-start, 0);
     }
   }
 
