--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -6,7 +6,7 @@ const hasSidebar = Boolean(sidebar.trim());
 <div class:list={['container', { hasSidebar }]}>
   {
     hasSidebar && (
-      <aside class="right-sidebar-container hidden lg:block">
+      <aside class="right-sidebar-container">
         <div class="right-sidebar" set:html={sidebar} />
       </aside>
     )
