--- a/packages/starlight/style/props.css
+++ b/packages/starlight/style/props.css
@@ -116,6 +116,7 @@
   --sl-nav-height: 3.5rem;
   --sl-nav-pad-x: 1.5rem;
   --sl-nav-pad-y: 0.75rem;
+  --sl-title-min-width: 10rem;
   --sl-mobile-toc-height: 3rem;
   --sl-sidebar-width: 18.75rem;
   --sl-sidebar-pad-x: 1rem;
