--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -1,7 +1,19 @@
+---
+interface Props {
+  hasToC: boolean;
+}
+---
+
 <div class="container">
-  <aside class="right-sidebar-container hidden lg:block">
-    <div class="right-sidebar"><slot name="right-sidebar" /></div>
-  </aside>
+  {
+    Astro.props.hasToC && (
+      <aside class="right-sidebar-container">
+        <div class="right-sidebar">
+          <slot name="right-sidebar" />
+        </div>
+      </aside>
+    )
+  }
   <div class="main-pane"><slot /></div>
 </div>
 
@@ -32,6 +44,12 @@
     }
 
     .main-pane {
+      width: 100%;
+    }
+
+    :global([data-has-sidebar]) .main-pane {
+      --sl-content-margin-inline: auto 0;
+
       order: 1;
       width: calc(
         var(--sl-content-width) +
