--- a/packages/starlight/404.astro
+++ b/packages/starlight/404.astro
@@ -1,5 +1,6 @@
 ---
 import config from 'virtual:starlight/user-config';
+import { withBase } from './utils/base';
 
 // Built-in CSS styles.
 import './style/props.css';
@@ -14,10 +15,10 @@ import PageFrame from './layout/PageFrame.astro';
 import Header from './components/Header.astro';
 import MarkdownContent from './components/MarkdownContent.astro';
 import ThemeProvider from './components/ThemeProvider.astro';
+import SkipLink from './components/SkipLink.astro';
 
 // Important that this is the last import so it can override built-in styles.
 import 'virtual:starlight/user-css';
-import { withBase } from './utils/base';
 
 const { lang = 'en', dir = 'ltr', locale } = config.defaultLocale || {};
 ---
@@ -30,6 +31,7 @@ const { lang = 'en', dir = 'ltr', locale } = config.defaultLocale || {};
   </head>
   <body>
     <ThemeProvider />
+    <SkipLink {locale} />
     <PageFrame {locale}>
       <Header slot="header" {locale} />
       <main>
@@ -37,9 +39,8 @@ const { lang = 'en', dir = 'ltr', locale } = config.defaultLocale || {};
           <h1 id="starlight__overview">404</h1>
           <p>Houston, we have a problem.</p>
           <p>
-            We couldn’t find that link. Check the address or <a
-              href={withBase('/')}>head back home</a
-            >.
+            We couldn’t find that link. Check the address or
+            <a href={withBase('/')}>head back home</a>.
           </p>
         </MarkdownContent>
       </main>
