Fix missing component attribute in 404 route
Didn’t cause any issues but tidying up for correctness

--- a/packages/starlight/404.astro
+++ b/packages/starlight/404.astro
@@ -32,7 +32,7 @@ const { lang = 'en', dir = 'ltr', locale } = config.defaultLocale || {};
   <body>
     <ThemeProvider />
     <SkipLink {locale} />
-    <PageFrame {locale}>
+    <PageFrame {locale} hasSidebar={false}>
       <Header slot="header" {locale} />
       <main>
         <MarkdownContent>
