--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -30,6 +30,7 @@ import './style/asides.css';
 
 // Important that this is the last import so it can override built-in styles.
 import 'virtual:starlight/user-css';
+import Hero from './components/Hero.astro';
 
 export async function getStaticPaths() {
   return paths;
@@ -88,19 +89,27 @@ const hasToC = Boolean(tocConfig);
       <TwoColumnContent {hasToC}>
         <RightSidebar slot="right-sidebar" {headings} {locale} {tocConfig} />
         <main data-pagefind-body lang={entryMeta.lang} dir={entryMeta.dir}>
-          <ContentPanel>
-            <h1
-              id="starlight__overview"
-              style="font-size: var(--sl-text-h1); line-height: var(--sl-line-height-headings); font-weight: 600; color: var(--sl-color-white); margin-top: 1rem;"
-            >
-              {entry.data.title}
-            </h1>
-            {isFallback && <FallbackContentNotice {locale} />}
-          </ContentPanel>
-          <ContentPanel>
-            <MarkdownContent><Content /></MarkdownContent>
-            <Footer {...{ entry, dir, lang, locale, sidebar }} />
-          </ContentPanel>
+          {/* TODO: Revisit how this logic flows. */}
+          {entry.data.hero ? (
+            <ContentPanel>
+              <Hero hero={entry.data.hero} fallbackTitle={entry.data.title} />
+              <MarkdownContent><Content /></MarkdownContent>
+            </ContentPanel>
+          ) : (
+            <ContentPanel>
+              <h1
+                id="starlight__overview"
+                style="font-size: var(--sl-text-h1); line-height: var(--sl-line-height-headings); font-weight: 600; color: var(--sl-color-white); margin-top: 1rem;"
+              >
+                {entry.data.title}
+              </h1>
+              {isFallback && <FallbackContentNotice {locale} />}
+            </ContentPanel>
+            <ContentPanel>
+              <MarkdownContent><Content /></MarkdownContent>
+              <Footer {...{ entry, dir, lang, locale, sidebar }} />
+            </ContentPanel>
+          )}
         </main>
       </TwoColumnContent>
     </PageFrame>
