--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -75,6 +75,11 @@ const {
   .copy {
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
+  }
+
+  .copy > * {
+    max-width: 50ch;
   }
 
   h1 {
@@ -105,9 +110,9 @@ const {
 
   @media (min-width: 50rem) {
     .hero {
-      grid-template-columns: 3fr 2fr;
+      grid-template-columns: 7fr 4fr;
       gap: 3%;
-      padding: clamp(2.5rem, calc(1rem + 10vmin), 10rem) 2.5rem;
+      padding-block: clamp(2.5rem, calc(1rem + 10vmin), 10rem);
     }
 
     .hero > img,
@@ -121,7 +126,7 @@ const {
     }
 
     .copy {
-      max-width: 39rem;
+      align-items: flex-start;
     }
 
     .actions {
