--- a/packages/starlight/components/PrevNextLinks.astro
+++ b/packages/starlight/components/PrevNextLinks.astro
@@ -15,7 +15,7 @@ const isRtl = dir === 'rtl';
 const t = useTranslations(locale);
 ---
 
-<div class="pagination-links" dir={dir}>
+<div class="pagination-links flex" dir={dir}>
   {
     prev && (
       <a href={prev.href} rel="prev">
@@ -44,7 +44,6 @@ const t = useTranslations(locale);
 
 <style>
   .pagination-links {
-    display: flex;
     flex-wrap: wrap;
     gap: 1rem;
   }
