--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -25,7 +25,7 @@ const t = useTranslations(Astro.props.locale);
   </button>
 
   <dialog style="padding:0" aria-label={t('search.label')}>
-    <div class="dialog-frame">
+    <div class="dialog-frame flex">
       {
         /* TODO: Make the layout of this button flexible to accommodate different word lengths. Currently hard-coded for English: “Cancel” */
       }
@@ -170,7 +170,6 @@ const t = useTranslations(Astro.props.locale);
   }
 
   .dialog-frame {
-    display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 1.5rem;
@@ -179,7 +178,6 @@ const t = useTranslations(Astro.props.locale);
   button[data-close-modal] {
     position: absolute;
     z-index: 1;
-    display: flex;
     align-items: center;
     align-self: flex-end;
     height: calc(64px * var(--pagefind-ui-scale));
@@ -212,10 +210,6 @@ const t = useTranslations(Astro.props.locale);
       height: max-content;
       min-height: 15rem;
       max-height: calc(100% - 8rem);
-    }
-
-    button[data-close-modal] {
-      display: none;
     }
   }
 </style>
