--- a/packages/starlight/layout/PageFrame.astro
+++ b/packages/starlight/layout/PageFrame.astro
@@ -11,7 +11,7 @@ const { hasSidebar, locale } = Astro.props;
 const t = useTranslations(locale);
 ---
 
-<div class="page">
+<div class="page flex">
   <header class="header"><slot name="header" /></header>
   {
     hasSidebar && (
@@ -30,7 +30,6 @@ const t = useTranslations(locale);
 
 <style>
   .page {
-    display: flex;
     flex-direction: column;
     min-height: 100vh;
   }
