Add box-shadow to prev/next page links as per designs

--- a/packages/starlight/components/PrevNextLinks.astro
+++ b/packages/starlight/components/PrevNextLinks.astro
@@ -61,6 +61,7 @@ const t = useTranslations(locale);
     padding: 1rem;
     text-decoration: none;
     color: var(--sl-color-gray-2);
+    box-shadow: var(--sl-shadow-md);
   }
   [rel='next'] {
     justify-content: end;
