Tweak sidebar styles after feedback

--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -74,7 +74,7 @@ interface Props {
     border-radius: 0.25rem;
     text-decoration: none;
     color: var(--sl-color-gray-2);
-    padding-inline: var(--sl-sidebar-item-padding-inline);
+    padding: 0.1em var(--sl-sidebar-item-padding-inline);
   }
 
   a:hover,
@@ -98,7 +98,7 @@ interface Props {
       font-size: var(--sl-text-base);
     }
     a {
-      font-size: var(--sl-text-xs);
+      font-size: var(--sl-text-sm);
     }
   }
 </style>
