Add some padding to page bottom

--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -69,6 +69,9 @@ const hasHero = Boolean(entry.data.hero);
           1.5rem + var(--sl-nav-height) + var(--sl-mobile-toc-height)
         );
       }
+      main {
+        padding-bottom: 3vh;
+      }
       @media (min-width: 50em) {
         [data-has-sidebar] {
           --sl-content-inline-start: var(--sl-sidebar-width);
