--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import { Image } from 'astro:assets';
 import CallToAction from './CallToAction.astro';
+import ResponsiveImage from './ResponsiveImage.astro';
 
 interface Props {
   fallbackTitle: string;
@@ -19,12 +19,14 @@ const {
 <div class="hero">
   {
     image?.file ? (
-      <Image
+      <ResponsiveImage
         src={image.file}
         loading="eager"
         width={400}
         height={400}
         alt={image.alt}
+        widths={[400, 600]}
+        sizes="70vw"
       />
     ) : (
       image?.html && <div class="hero-html flex" set:html={image.html} />
