avoid page breaks in code blocks

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -116,6 +116,7 @@
     .content :global(pre) {
       overflow-x: hidden !important;
       white-space: pre-wrap !important;
+      page-break-inside: avoid;
     }
   }
 </style>
