--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -294,7 +294,7 @@ const t = useTranslations(Astro.props.locale);
 
   #starlight__search .pagefind-ui__result-excerpt {
     font-size: var(--sl-text-body-sm);
-    word-break: break-all;
+    overflow-wrap: break-word;
   }
 
   #starlight__search mark {
