--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -28,7 +28,7 @@ const { sidebar, locale } = Astro.props;
     gap: 1rem;
   }
 
-  .sidebar > :global(ul) {
+  .sidebar > :global(:last-child) {
     padding-bottom: 1rem;
   }
 
