Fix focus outline positioning in tabs

--- a/packages/starlight/user-components/Tabs.astro
+++ b/packages/starlight/user-components/Tabs.astro
@@ -58,6 +58,7 @@ const { html, panels } = processPanels(panelHtml);
     text-decoration: none;
     border-bottom: 2px solid var(--sl-color-gray-5);
     color: var(--sl-color-gray-3);
+    outline-offset: var(--sl-outline-offset-inside);
   }
   .tab [role='tab'][aria-selected] {
     color: var(--sl-color-white);
