--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -28,6 +28,10 @@ const { sidebar, locale } = Astro.props;
     gap: 1rem;
   }
 
+  .sidebar > :global(:last-child) {
+    padding-bottom: 1rem;
+  }
+
   .mobile-preferences {
     justify-content: space-between;
     border-top: 1px solid var(--sl-color-gray-6);
