Handle table overflow

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -95,6 +95,8 @@
   }
 
   .content :global(table) {
+    display: block;
+    overflow: auto;
     border: 1px solid var(--sl-color-gray-5);
     border-collapse: collapse;
   }
