Fix disclosure caret rotation in subgroups

--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -65,7 +65,7 @@ interface Props {
   :global([dir='rtl']) .caret {
     transform: rotateZ(180deg);
   }
-  [open] .caret {
+  [open] > summary .caret {
     transform: rotateZ(90deg);
   }
 
