--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -85,6 +85,11 @@ const hasHero = Boolean(entry.data.hero);
           scroll-padding-top: calc(1.5rem + var(--sl-nav-height));
         }
       }
+      @media print {
+        main {
+          padding-bottom: 0 !important;
+        }
+      }
     </style>
   </head>
   <body>
