--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -96,6 +96,9 @@
 
   .content :global(table) {
     display: block;
+    width: 100%;
+    width: max-content;
+    max-width: 100%;
     overflow: auto;
     border: 1px solid var(--sl-color-gray-5);
     border-collapse: collapse;
