Include `decoding="async"` for full parity with `<Image>`

--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -17,6 +17,7 @@ const {
 
 const imageAttrs = {
   loading: 'eager' as const,
+  decoding: 'async' as const,
   width: 400,
   height: 400,
   alt: image?.alt,
