--- a/docs/src/components/file-tree.astro
+++ b/docs/src/components/file-tree.astro
@@ -17,7 +17,7 @@ const processedContent = await fileTreeProcessor.process({
 });
 ---
 
-<file-tree set:html={processedContent} />
+<file-tree set:html={processedContent} data-pagefind-ignore="index" />
 
 <style is:global>
   file-tree {
