Handle table overflow (#177)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -95,7 +95,8 @@
   }
 
   .content :global(table) {
-    border: 1px solid var(--sl-color-gray-5);
+    display: block;
+    overflow: auto;
     border-collapse: collapse;
   }
   .content :global(tr:nth-child(2n)) {
