--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -37,4 +37,10 @@ const { sidebar, locale } = Astro.props;
     border-top: 1px solid var(--sl-color-gray-6);
     padding: 0.5rem 0;
   }
+
+  @media (min-width: 50rem) {
+    .sidebar > :global(:nth-last-child(-n+2)) {
+      padding-bottom: 1rem;
+    }
+  }
 </style>
