--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -39,7 +39,7 @@ const { sidebar, locale } = Astro.props;
   }
 
   @media (min-width: 50rem) {
-    .sidebar > :global(:nth-last-child(-n+2)) {
+    .sidebar > :global(:nth-last-child(2)) {
       padding-bottom: 1rem;
     }
   }
