--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -102,7 +102,7 @@ const hasHero = Boolean(entry.data.hero);
           ) : (
             <ContentPanel>
               <h1
-                id="top"
+                id="_top"
                 data-page-title
                 style="font-size: var(--sl-text-h1); line-height: var(--sl-line-height-headings); font-weight: 600; color: var(--sl-color-white); margin-top: 1rem;"
               >
