refactor: moving all print style selectors to the global CSS sheet

--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -19,7 +19,7 @@ const pagefindTranslations = {
 };
 ---
 
-<site-search data-translations={JSON.stringify(pagefindTranslations)} class="print-hidden">
+<site-search data-translations={JSON.stringify(pagefindTranslations)} class="print:hidden">
   <button data-open-modal disabled>
     {
       /* The span is `aria-hidden` because it is not shown on small screens. Instead, the icon label is used for accessibility purposes. */
